
Version 1.1 	     NOT RELEASED
================================
- Small changes, English translation (mamba)


Version 1.0:  (XOOPS Taiwan)
===================================
- original release 