@@ -7,7 +7,7 @@
 
 $adminmenu = array();
 $i         = 1;
-$icon_dir  = substr(XOOPS_VERSION, 6, 3) === '2.6' ? "" : "images/admin/";
+$icon_dir  = substr(XOOPS_VERSION, 6, 3) == '2.6' ? "" : "images/admin/";
 
 $adminmenu[$i]['title'] = _MI_TAD_ADMIN_HOME;
 $adminmenu[$i]['link']  = 'admin/index.php';
