@@ -1,4 +1,8 @@
-Read Me First
-=============
+INSTALL/UNISTALL
+=================
 
-Please make sure that you download the XOOPS Icon Set, and upload it to uploads/images directory
+No special measures necessary, follow the standard installation process and extract the module folder into the ../modules directory.
+
+Install the module through Admin -> System Module -> Modules.
+
+Detailed instructions on installing modules are available in the XOOPS Operations Manual: http://goo.gl/adT2i
