@@ -1,4 +1,5 @@
-Read Me First
-=============
 
-Please make sure that you download the XOOPS Icon Set, and upload it to uploads/images directory
+What is Jill Booking Module?
+======================
+
+The purpose of this module is to provide a venue booking module
