@@ -7,4 +7,4 @@
 
 //define('_MB_JB_B_TODAY_LIST_OPT0' , '秀出');
 
-define('_MB_JB_B_TODAY_LIST_OPT0', 'show off');
+define('_MB_JB_B_TODAY_LIST_OPT0', 'Current options');
