@@ -49,30 +49,30 @@ define("_MD_INDIVIDUAL_BOOKING","個人預約");
 define("_MD_NO_RECORD","尚無預約記錄");
 */
 
-define("_MD_JILLBOOKIN_JB_SN", "Booking number");
-define("_MD_JILLBOOKIN_JB_BOOKING_CONTENT", "Appointment reasons");
+define("_MD_JILLBOOKIN_JB_SN", "Reservation number");
+define("_MD_JILLBOOKIN_JB_BOOKING_CONTENT", "Reservation Details");
 define("_MD_JILLBOOKIN_JB_DATE", "All dates");
 define("_MD_JILLBOOKIN_JB_START_DATE", "Start Date");
 define("_MD_JILLBOOKIN_JB_END_DATE", "End Date");
-define("_MD_JILLBOOKIN_JB_WEEK", "Appointment week");
-define("_MD_JILLBOOKIN_JB_UID", "Reserving party");
-define("_MD_JILLBOOKIN_CONTENT", "Appointment reasons");
-define("_MD_JILLBOOKIN_NO", "May reserve");
-define("_MD_JILLBOOKIN_JB_BOOKING_TIME", "Appointment");
+define("_MD_JILLBOOKIN_JB_WEEK", "Reservation week");
+define("_MD_JILLBOOKIN_JB_UID", "Reserved by:");
+define("_MD_JILLBOOKIN_CONTENT", "Reservation Details");
+define("_MD_JILLBOOKIN_NO", "Available");
+define("_MD_JILLBOOKIN_JB_BOOKING_TIME", "Reservation");
 define("_MD_JILLBOOKIN_JBT_SN", "Period number");
 define("_MD_JILLBOOKIN_JB_STATUS", "Status");
-define("_MD_JILLBOOKIN_SMNAME1", "Space reservation");
-define("_MD_JILLBOOKIN_SMNAME2", "Batch reserve");
+define("_MD_JILLBOOKIN_SMNAME1", "Reservation");
+define("_MD_JILLBOOKIN_SMNAME2", "Batch reservation");
 define("_MD_JILLBOOKIN_SMNAME3", "Reservation list");
 define("_MD_JILLBOOKIN_CHOOSEITEM", "Please select the field");
-define("_MD_JILLBOOKIN_W0", "day");
-define("_MD_JILLBOOKIN_W1", "one");
-define("_MD_JILLBOOKIN_W2", "two");
-define("_MD_JILLBOOKIN_W3", "three");
-define("_MD_JILLBOOKIN_W4", "four");
-define("_MD_JILLBOOKIN_W5", "five");
-define("_MD_JILLBOOKIN_W6", "six");
-define("_MD_TIME_WEEK", "Can make an appointment times / week");
+define("_MD_JILLBOOKIN_W0", "Sunday");
+define("_MD_JILLBOOKIN_W1", "Monday");
+define("_MD_JILLBOOKIN_W2", "Tuesday");
+define("_MD_JILLBOOKIN_W3", "Wednesday");
+define("_MD_JILLBOOKIN_W4", "Thursday");
+define("_MD_JILLBOOKIN_W5", "Friday");
+define("_MD_JILLBOOKIN_W6", "Saturday");
+define("_MD_TIME_WEEK", "Can make appointments for the whole week");
 define("_MD_LASTWEEK", "Previous week");
 define("_MD_NEXTWEEK", "Next week");
 define("_MD_SINGLE_SAVE", "Direct appointment");
@@ -81,6 +81,6 @@ define("_MD_JDATE", "Date");
 define("_MD_JWEEK", "Week");
 define("_MD_JSESSION", "Session");
 define("_MD_JBOOKING", "Reservation");
-define("_MD_JBOOKING_ERROR", "Those who want to make an appointment, please log in, and made an appointment contact the administrator privileges!");
-define("_MD_INDIVIDUAL_BOOKING", "Personal reserve");
-define("_MD_NO_RECORD", "No reservation record");
+define("_MD_JBOOKING_ERROR", "Those who want to make a reservation, please log in and made a reservation or contact the Admin!");
+define("_MD_INDIVIDUAL_BOOKING", "Individual reservation");
+define("_MD_NO_RECORD", "No reservation");
