@@ -1,0 +1,28 @@
+<div id="help-template" class="outer">
+    <{include file=$smarty.const._MI_JILLBOOKIN_HELP_HEADER}>
+
+    <h4 class="odd">Description</h4>
+
+    <p class="even">The purpose of this module is to provide a venue booking module<br /> <br />
+        </p>
+
+    <h4 class="odd">Install/uninstall</h4>
+
+    <p class="even">No special measures necessary, follow the standard installation process –
+    extract the module folder into the ../modules directory. Install the
+    module through Admin -> System Module -> Modules.<br /> <br />
+    Detailed instructions on installing modules are available in the
+    <a href="http://goo.gl/adT2i">XOOPS Operations Manual</a> </p>
+
+
+    <h4 class="odd">Operating instructions</h4>
+
+    This module and its operations are very simple.<br /> <br />
+    Detailed instructions on configuring the access rights for user groups are available in the
+    <a href="http://goo.gl/adT2i">XOOPS Operations Manual</a><br /> <br />
+
+    <h4 class="odd">Tutorial</h4>
+
+    <p class="even">There is no tutorial available at the moment.</p>
+
+</div>
