@@ -1,0 +1,6 @@
+    <h1 class="head">Help:
+        <a class="ui-corner-all tooltip" href="<{$xoops_url}>/modules/<{$smarty.const._MI_JILLBOOKIN_DIRNAME}>/admin/index.php"
+           title="Back to the administration of <{$smarty.const._MI_JILLBOOKIN_NAME}>"> <{$smarty.const._MI_JILLBOOKIN_NAME}>
+            <img src="<{xoAdminIcons home.png}>"
+                 alt="Back to the Administration of <{$smarty.const._MI_JILLBOOKIN_NAME}>"/>
+        </a></h1>
