@@ -2,8 +2,9 @@
 Version 1.1 	     NOT RELEASED
 ================================
 - Small changes, English translation (mamba)
+- added standard XOOPS help (mamba)
 
 
 Version 1.0:  (XOOPS Taiwan)
 ===================================
-- original release 
+- original release (Jill)
